worked on chapter konzept

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -24,6 +24,9 @@
 \newacronym{ac:icp}{ICP}{integrated circuit piezoelectric}
 \newacronym{ac:ni}{NI}{National Instruments}
 \newacronym{ac:vi}{VI}{virtuelles Instrument}
+\newacronym{ac:fir}{FIR}{finite impulse response}
+\newacronym{ac:lti}{LTI}{linear time invariant}
+\newacronym{ac:tp}{TP}{Tiefpass}
 
 
 
