--- a/bibliography.bib
+++ b/bibliography.bib
@@ -166,3 +166,35 @@
   keywords = {lit},
 }
 
+@BOOK{lit:vongruenigen,
+  title = {Digitale Signalverarbeitung},
+  publisher = {Hanser},
+  year = {2008},
+  author = {Daniel Ch. von Gr"unigen},
+  edition = {4},
+  month = {},
+  ISBN = {978-3-446-41463-1},
+  keywords = {lit},
+}
+
+@inbook{img:filterentwurf,
+  title = {},
+  booktitle = {Filter Design \& Analysis Tool},
+  publisher = {},
+  year = {},
+  author = {MATLAB },
+  pages = {},
+  keywords = {pic},
+}
+
+@inbook{lit:papula,
+  title = {},
+  booktitle = {Mathematische Formelsammlung f"ur Ingenieure und Naturwissenschaftler},
+  publisher = {Vieweg Verlag},
+  year = {209},
+  author = {Lothar Papula },
+  edition = {10},
+  pages = {61},
+  ISBN = {978-3834807571}, 
+  keywords = {lit},
+}
