--- a/bibliography.bib
+++ b/bibliography.bib
@@ -166,12 +166,13 @@
   keywords = {lit},
 }
 
-@BOOK{lit:vongruenigen,
-  title = {Digitale Signalverarbeitung},
+@inbook{lit:vongruenigen,
+  booktitle = {Digitale Signalverarbeitung},
   publisher = {Hanser},
   year = {2008},
   author = {Daniel Ch. von Gr"unigen},
   edition = {4},
+  pages = {50, 51},
   month = {},
   ISBN = {978-3-446-41463-1},
   keywords = {lit},
@@ -188,13 +189,12 @@
 }
 
 @inbook{lit:papula,
-  title = {},
   booktitle = {Mathematische Formelsammlung f"ur Ingenieure und Naturwissenschaftler},
   publisher = {Vieweg Verlag},
   year = {209},
   author = {Lothar Papula },
   edition = {10},
-  pages = {61},
+  pages = {50, 51},
   ISBN = {978-3834807571}, 
   keywords = {lit},
 }
