--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -40,7 +40,7 @@ In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert 
 In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde das Tracken eines Bewegungsablauf mittels Beschleunigungssensor, Gyroskop und \gls{g:magnetometer} realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann wird die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des Gyroskopes die Messung nach wenigen Sekunden schon stark verfälscht ist, wurde eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit  nur, wenn sich das Testobjekt bewegt. Die Bewegung wird mittels einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des Gyroskopes mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichten sie eine Genauigkeit von 2 cm auf eine Distanz von 50 cm \cite{lit:doubleint}.
 %
 \section{Aufgabenstellung}\label{s:aufgabenstellung}
-blabla\par
+\todo{add blabla}\par
 %
 \subsection{Ablauf und Gliederung des Projekts}\label{ss:ablauf_gliederung_projekt}
 	Das Projekt wird in insgesamt vier Phasen gegliedert. Jede Phase beinhaltet dabei mehrere \gls{ac:ap}, die durch die beiden Autoren abgearbeitet werden. Dabei werden Arbeiten gemeinsam und getrennt durchgeführt. Dieses Vorgehen steigert die Effizienz und garantiert gleichzeitig eine gewisse Redundanz im Arbeitsprozess. Der detaillierte Ablauf ist der Abbildung \vref{img:projekablauf} zu entnehmen. Dabei sind die linken \gls{ac:ap} Simon Grossenbacher und die rechten Reto Zurschmieden zuzuordnen.
