add explaination of integration

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -191,10 +191,32 @@
 @inbook{lit:papula,
   booktitle = {Mathematische Formelsammlung f"ur Ingenieure und Naturwissenschaftler},
   publisher = {Vieweg Verlag},
-  year = {209},
+  year = {2009},
   author = {Lothar Papula },
   edition = {10},
   pages = {50, 51},
   ISBN = {978-3834807571}, 
   keywords = {lit},
+}
+
+@inbook{lit:baeni,
+  booktitle = {Analysis 2},
+  publisher = {Berner Fachhochschule},
+  year = {2012},
+  author = {Dr. Werner B"ani},
+  edition = {},
+  pages = {2-4},
+  ISBN = {}, 
+  keywords = {lit},
+}
+
+@inbook{img:baeni,
+  booktitle = {Analysis 2},
+  publisher = {Berner Fachhochschule},
+  year = {2012},
+  author = {Dr. Werner B"ani},
+  edition = {},
+  pages = {3,4},
+  ISBN = {}, 
+  keywords = {pic},
 }
